--- a/src/assets/i18n/am.json
+++ b/src/assets/i18n/am.json
@@ -230,6 +230,13 @@
     "የመግቢያ ፎርም የተሟላ መረጃ ለማግኘት አልተሳካም",
   "Fail to un complete entry form": "የተባበሩት ሙሉ የመግቢያ ቅጽ አልተሳካም",
   "Fail to complete entry form": "የመግቢያ ፎርም መሙላት አልተሳካም",
+  "Completeness information": "የተሟላ መረጃ",
+  "Discovering completeness information": "የተሟላ መረጃ ተገኙ",
+  "Fail to discover completeness information": "የተሟላ መረጃ ለማግኘት አልተሳካም",
+  "Username": "የተጠቃሚ ስም",
+  "Full name": "ሙሉ ስም",
+  "E-mial": "ኢ-mial",
+  "Phone number": "ስልክ ቁጥር",
   "Sync": "አመሳስል",
   "Clear local metadata": "አጽዳ አካባቢያዊ ሜታዳታ",
   "Clear metaData": "አጽዳ ሜታዳታ",
