--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -237,6 +237,13 @@
     "فشل لاكتشاف معلومات دخول شكل اكتمال",
   "Fail to un complete entry form": "تفشل في نموذج إدخال كامل للامم المتحدة",
   "Fail to complete entry form": "فشلت في إكمال نموذج الدخول",
+  "Completeness information": "معلومات الاكتمال",
+  "Discovering completeness information": "اكتشاف المعلومات اكتمالها",
+  "Fail to discover completeness information": "فشل لاكتشاف معلومات اكتمالها",
+  "Username": "اسم المستخدم",
+  "Full name": "الاسم الكامل",
+  "E-mial": "E-آخر mial",
+  "Phone number": "رقم الهاتف",
   "Sync": "مزامنة",
   "Clear local metadata": "الفوقية المحلية واضح",
   "Clear metaData": "فوقية واضحة",
