--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -242,6 +242,14 @@
     "এন্ট্রি ফর্ম সম্পূর্ণতার তথ্য খুঁজে বের করতে ব্যর্থ",
   "Fail to un complete entry form": "উন সম্পূর্ণ এন্ট্রি ফর্ম ব্যর্থ",
   "Fail to complete entry form": "এন্ট্রি ফর্ম পূরণ করার জন্য ব্যর্থ",
+  "Completeness information": "সম্পূর্ণতার তথ্য",
+  "Discovering completeness information": "সম্পূর্ণতার তথ্য আবিষ্কার",
+  "Fail to discover completeness information":
+    "সম্পূর্ণতার তথ্য খুঁজে বের করতে ব্যর্থ",
+  "Username": "ব্যবহারকারীর নাম",
+  "Full name": "পুরো নাম",
+  "E-mial": "ই-mial",
+  "Phone number": "ফোন নম্বর",
   "Sync": "সুসংগত",
   "Clear local metadata": "সাফ স্থানীয় মেটাডেটা",
   "Clear metaData": "মেটাডাটা সাফ",
