--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -245,6 +245,14 @@
     "Fail at opdage tilmeldingsblanket fuldstændighed oplysninger",
   "Fail to un complete entry form": "Fail at un komplet tilmeldingsblanket",
   "Fail to complete entry form": "Fail at fuldføre formular post",
+  "Completeness information": "Fuldstændighed oplysninger",
+  "Discovering completeness information": "Opdage fuldstændighed oplysninger",
+  "Fail to discover completeness information":
+    "Fail at opdage fuldstændighed oplysninger",
+  "Username": "Brugernavn",
+  "Full name": "Fulde navn",
+  "E-mial": "E-MIAL",
+  "Phone number": "Telefonnummer",
   "Sync": "Synkronisere",
   "Clear local metadata": "Klar lokale metadata",
   "Clear metaData": "klare metadata",
