--- a/src/assets/i18n/ha.json
+++ b/src/assets/i18n/ha.json
@@ -236,6 +236,13 @@
     "Kasa gano shigarwa form cikawa bayanai",
   "Fail to un complete entry form": "Kasa un cikakken shigarwa form",
   "Fail to complete entry form": "Kasa don kammala shigarwa form",
+  "Completeness information": "cikawa bayanai",
+  "Discovering completeness information": "Ganowa cikawa bayanai",
+  "Fail to discover completeness information": "Kasa gano cikawa bayanai",
+  "Username": "Sunan mai amfani",
+  "Full name": "Cikakken suna",
+  "E-mial": "E-mial",
+  "Phone number": "Lambar tarho",
   "Sync": "Sync",
   "Clear local metadata": "Clear gida metadata",
   "Clear metaData": "Clear metadata",
