--- a/src/assets/i18n/ht.json
+++ b/src/assets/i18n/ht.json
@@ -245,6 +245,14 @@
     "Echèk yo dekouvri enfòmasyon antre fòm konplè",
   "Fail to un complete entry form": "Fail un fòm antre konplè",
   "Fail to complete entry form": "Fail ranpli fòm antre",
+  "Completeness information": "enfòmasyon konplè",
+  "Discovering completeness information": "Dekouvri enfòmasyon konplè",
+  "Fail to discover completeness information":
+    "Echèk yo dekouvri enfòmasyon konplè",
+  "Username": "D '",
+  "Full name": "tout non",
+  "E-mial": "E-mial",
+  "Phone number": "Nimewo telefòn",
   "Sync": "senkro",
   "Clear local metadata": "Klè Metadata lokal",
   "Clear metaData": "Metadata Klè",
