--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,6 @@
 {
   "Account": "Счет",
+  "Apps": "Программы",
   "Log out": "Выйти",
   "About": "Около",
   "Aggregate status": "Совокупное состояние",
@@ -258,6 +259,14 @@
     "Не удалось обнаружить информацию входной формы полноты",
   "Fail to un complete entry form": "Ошибка при ООН полной формы ввода",
   "Fail to complete entry form": "Не удалось завершить форму ввода",
+  "Completeness information": "Полнота информации",
+  "Discovering completeness information": "Обнаружив полноту информации",
+  "Fail to discover completeness information":
+    "Не удалось обнаружить полноту информации",
+  "Username": "имя пользователя",
+  "Full name": "Полное имя",
+  "E-mial": "E-MIAL",
+  "Phone number": "Номер телефона",
   "Sync": "Синхронизация",
   "Clear local metadata": "Очистка локальных метаданных",
   "Clear metaData": "Очистить мЕТАДАННЫЕ",
@@ -430,7 +439,7 @@
   "Dashboard list": "список Dashboard",
   "Search dashboard by name": "Поиск по названию панели",
   "Layout": "раскладка",
-  "Table  Chart Layout": "Макет таблицы / диаграммы",
+  "Table / Chart Layout": "Макет таблицы / диаграммы",
   "Filters": "фильтры",
   "Column": "колонка",
   "Row": "Ряд",
