--- a/src/assets/i18n/sd.json
+++ b/src/assets/i18n/sd.json
@@ -1,5 +1,6 @@
 {
   "Account": "اڪائونٽ",
+  "Apps": "ايپس",
   "Log out": "ڪم ڇڏڻ",
   "About": "جي باري ۾",
   "Aggregate status": "گڏيل عددي معلومات حاصل حيثيت",
@@ -243,6 +244,13 @@
     "داخلا فارم پورو ڄاڻ جي کوج ڪرڻ لاء لکان",
   "Fail to un complete entry form": "گڏيل قومن جي مڪمل داخلا فارم لاء لکان",
   "Fail to complete entry form": "داخلا فارم کي مڪمل ڪرڻ لاء لکان",
+  "Completeness information": "سمپورن معلومات",
+  "Discovering completeness information": "سمپورن معلومات Discovering",
+  "Fail to discover completeness information": "سمپورن ڄاڻ جي کوج ڪرڻ لاء لکان",
+  "Username": "کاتي جو نالو",
+  "Full name": "پورو نالو",
+  "E-mial": "اي-mial",
+  "Phone number": "فون نمبر",
   "Sync": "هم",
   "Clear local metadata": "واضح مقامي سڀني بازارن ۾",
   "Clear metaData": "واضح سڀني بازارن ۾",
