--- a/src/assets/i18n/tg.json
+++ b/src/assets/i18n/tg.json
@@ -1,5 +1,6 @@
 {
   "Account": "Ҳисоби",
+  "Apps": "барномаҳо",
   "Log out": "Баромадан",
   "About": "дар бораи",
   "Aggregate status": "вазъи умумии",
@@ -247,6 +248,13 @@
     "Хилоф кашф маълумот ворид шакли пурра",
   "Fail to un complete entry form": "Хилоф СММ шакли вуруди пурра",
   "Fail to complete entry form": "Ба анҷом шакли вуруд",
+  "Completeness information": "маълумоти пурра",
+  "Discovering completeness information": "Ошкор маълумоти пурра",
+  "Fail to discover completeness information": "Хилоф кашф маълумоти мукаммал",
+  "Username": "Логин",
+  "Full name": "Номи пурра",
+  "E-mial": "E-mial",
+  "Phone number": "Рақами мобилӣ",
   "Sync": "Ҳмҳнг",
   "Clear local metadata": "Clear луѓати маҳаллӣ",
   "Clear metaData": "Метадода Clear",
