--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -224,6 +224,13 @@
     "无法发现报名表信息的完整性",
   "Fail to un complete entry form": "不能完全取消报名表",
   "Fail to complete entry form": "无法完成报名表",
+  "Completeness information": "信息的完整性",
+  "Discovering completeness information": "发现完整信息",
+  "Fail to discover completeness information": "无法发现完整信息",
+  "Username": "用户名",
+  "Full name": "全名",
+  "E-mial": "E-MIAL",
+  "Phone number": "电话号码",
   "Sync": "同步",
   "Clear local metadata": "清除本地元",
   "Clear metaData": "清除元",
