--- a/src/assets/i18n/zh-TW.json
+++ b/src/assets/i18n/zh-TW.json
@@ -224,6 +224,13 @@
     "無法發現報名表信息的完整性",
   "Fail to un complete entry form": "不能完全取消報名表",
   "Fail to complete entry form": "無法完成報名表",
+  "Completeness information": "信息的完整性",
+  "Discovering completeness information": "發現完整信息",
+  "Fail to discover completeness information": "無法發現完整信息",
+  "Username": "用戶名",
+  "Full name": "全名",
+  "E-mial": "E-MIAL",
+  "Phone number": "電話號碼",
   "Sync": "同步",
   "Clear local metadata": "清除本地元",
   "Clear metaData": "清除元",
