--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,6 @@
 {
   "Account": "Cuenta",
+  "Apps": "aplicaciones",
   "Log out": "Cerrar sesión",
   "About": "Acerca de",
   "Aggregate status": "estado de agregado",
@@ -278,6 +279,15 @@
   "Fail to un complete entry form":
     "Dejar de formulario de inscripción completa de la ONU",
   "Fail to complete entry form": "No completar formulario de inscripción",
+  "Completeness information": "información de integridad",
+  "Discovering completeness information":
+    "El descubrimiento de información de integridad",
+  "Fail to discover completeness information":
+    "Dejar de descubrir información de integridad",
+  "Username": "Nombre de usuario",
+  "Full name": "Nombre completo",
+  "E-mial": "E-mial",
+  "Phone number": "Número de teléfono",
   "Sync": "sync",
   "Clear local metadata": "metadatos locales clara",
   "Clear metaData": "metadatos claros",
