--- a/src/assets/i18n/mn.json
+++ b/src/assets/i18n/mn.json
@@ -1,5 +1,6 @@
 {
   "Account": "Дансны",
+  "Apps": "Apps",
   "Log out": "Гарах",
   "About": "тухай",
   "Aggregate status": "Нийт байдал",
@@ -248,6 +249,13 @@
     "бичилт бүрэн гүйцэд мэдээллийг олж чадаагүй",
   "Fail to un complete entry form": "НҮБ-ын бүрэн тэмдэглэл хэлбэрээр чадахгүй",
   "Fail to complete entry form": "бүртгэл маягтыг бөглөж чадахгүй",
+  "Completeness information": "Иж бурэн мэдээлэл",
+  "Discovering completeness information": "Иж бүрэн мэдээлэл олж мэдэх",
+  "Fail to discover completeness information": "Иж бүрэн мэдээлэл олж чадаагүй",
+  "Username": "хэрэглэгчийн нэр",
+  "Full name": "Бүтэн нэр",
+  "E-mial": "И-mial",
+  "Phone number": "утасны дугаар",
   "Sync": "Синхрон",
   "Clear local metadata": "Тодорхой орон нутгийн мета өгөгдлийг",
   "Clear metaData": "Clear мета өгөгдлийг",
