--- a/src/assets/i18n/so.json
+++ b/src/assets/i18n/so.json
@@ -1,5 +1,6 @@
 {
   "Account": "account",
+  "Apps": "Apps",
   "Log out": "Ka bax",
   "About": "About",
   "Aggregate status": "xaaladda wadar",
@@ -268,6 +269,15 @@
     "Ku guuldareysato inay foomka soo galo dhamaystiran un",
   "Fail to complete entry form":
     "Ku guuldareysato inay foomka soo galo buuxiso",
+  "Completeness information": "macluumaad dhameystiran",
+  "Discovering completeness information":
+    "La qabsashada macluumaad dhameystiran",
+  "Fail to discover completeness information":
+    "Guul daraystaan ​​in ay ogaadaan warbixin dhameystiran",
+  "Username": "username",
+  "Full name": "magaca oo buuxa",
+  "E-mial": "E-mial",
+  "Phone number": "Lambarka taleefanka",
   "Sync": "nidaameed",
   "Clear local metadata": "metadata maxaliga ah oo cad",
   "Clear metaData": "metadata Clear",
